--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class='container'>
 		<div class='row'>
 			<div class='col-md-4 sidenav'>
-				<img src='pic.jpg' alt=''/>
+				<img src='pic.JPG' alt=''/>
 				<div class='text-center'>
 					<h3 class="mt-2">
 						<a href="">MD KAYS</a>
