--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<i class='fa fa-phone'></i> - <a href=''>+8801862915803</a><br/>
 						<i class='fa fa-linkedin'></i> -  <a target="_blank" href='https://www.linkedin.com/in/muhammad-kayes-4ba573152/'>LinkedIn</a></br>
 						<i class='fa fa-github'></i> -  <a target="_blank" href='http://github.com/muhammadk28'>Github</a>
+						<i class='fa fa-portrait'></i> -  <a target="_blank" href='http://github.com/muhammadk28/portfolio'>Portfolio</a>
 					</address>
 				</section>
 				<section class="mt-3">
