--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<i class='fa fa-envelope'></i> - <a href='mailto:mdkayes00@gmail.com '>mdkayes00@gmail.com</a><br/>
 						<i class='fa fa-phone'></i> - <a href=''>+8801862915803</a><br/>
 						<i class='fa fa-linkedin'></i> -  <a target="_blank" href='https://www.linkedin.com/in/muhammad-kayes-4ba573152/'>LinkedIn</a></br>
-						<i class='fa fa-github'></i> -  <a target="_blank" href='http://github.com/muhammadk28'>Github</a>
-						<i class='fa fa-portrait'></i> -  <a target="_blank" href='http://github.com/muhammadk28/portfolio'>Portfolio</a>
+						<i class='fa fa-github'></i> -  <a target="_blank" href='http://github.com/muhammadk28'>Github</a></br>
+						<i class='fa fa-portrait'></i> -  <a target="_blank" href='https://muhammadk28.github.io/portfolio/'>Portfolio</a>
 					</address>
 				</section>
 				<section class="mt-3">
