--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--  <meta charset="UTF-8">  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>শুভ নভবর্ষ</title>
+  <title>CV || MD KAYS</title>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'/>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel='stylesheet' href='style.css'/>
@@ -25,7 +25,7 @@
 				<section class="mt-3">
 					<address class="my_info">
 						<i class='fa fa-envelope'></i> - <a href='mailto:mdkayes00@gmail.com '>mdkayes00@gmail.com</a><br/>
-						<i class='fa fa-phone'></i> - <a href=''>+8801862915803</a><br/>
+						<i class='fa fa-phone'></i> - <a href=''>+8801878396187</a><br/>
 						<i class='fa fa-linkedin'></i> -  <a target="_blank" href='https://www.linkedin.com/in/muhammad-kayes-4ba573152/'>LinkedIn</a></br>
 						<i class='fa fa-github'></i> -  <a target="_blank" href='http://github.com/muhammadk28'>Github</a></br>
 						<i class='fa fa-address-card'></i> -  <a target="_blank" href='https://muhammadk28.github.io/portfolio/'>Portfolio</a>
